force-app/main/default/objects/OwnBackup_Credential__c/OwnBackup_Credential__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>List of OwnBackup credentials.</description>
    <label>OwnBackup Credential</label>
</CustomObject>