force-app/main/default/objects/OwnBackup_Credential__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>OwnBackup account email address.</description>
    <inlineHelpText>OwnBackup account email address.</inlineHelpText>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>