force-app/main/default/objects/OwnBackup_Credential__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>OwnBackup account password.</description>
    <inlineHelpText>OwnBackup account password.</inlineHelpText>
    <label>Password</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>