force-app/main/default/objects/OwnBackup_Credential__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>The region this account is located in for the API calls to target the correct region URL endpoint. For example app1, hipaa1, emea1, emea4, app9, etc.</description>
    <inlineHelpText>The region this account is located in for the API calls to target the correct region URL endpoint. For example app1, hipaa1, emea1, emea4, app9, etc.</inlineHelpText>
    <label>Region</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>